# animanga-scrapper

./: Cargo.toml
data/: manga_db.sqlite3
src/: lib.rs  main.rs
tests/: basic_tests.rs
